# Cython2Upy

./: CMakeLists.txt  Makefile  README.md  main.c  micropython.h  modify_includes.py  my_list.c  my_list.cp312-win_amd64.pyd  my_list.pyx  setup.py
